# Face_Recognition_Raspberrypi

./: .CMakeLists.txt.swp  .encode_faces.cpp.swp  .face_recognition.cpp.swp  .gitignore  CMakeLists.txt  README.md  encode_faces.cpp  face_detection.cpp  face_recognition.cpp  face_recognition_quant.tflite  feature_extractor.cpp  feature_extractor.h  test.cpp  test.txt  util.cpp  util.h
include/: face_recognition.h  utils.h
models/: face_recognition.tflite  shuffle_optimize_0.25_256_373.tflite  shuffle_optimize_0.25_256_373_quant.tflite  shuffle_optimize_0.25_512_121.tflite  shuffle_optimize_0.25_512_121_quant.tflite  shuffle_optimize_0.5_256_121.tflite  shuffle_optimize_0.5_256_121_quant.tflite  shuffle_optimize_0.5_256_232_quant.tflite  shuffle_optimize_0.5_256_252_quant.tflite  shuffle_optimize_0.5_256_373_quant.tflite
src/: CMakeLists.txt  \  encode_faces.cpp  face_recognition.cpp  main.cpp  utils.cpp
